--- a/gui/interfaces/uix_information_company.ui
+++ b/gui/interfaces/uix_information_company.ui
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>uix_information_company</class>
+ <widget class="QDialog" name="uix_information_company">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>415</width>
-    <height>491</height>
+    <width>627</width>
+    <height>403</height>
    </rect>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>415</width>
-    <height>538</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -25,7 +19,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>110</x>
      <y>10</y>
      <width>391</width>
      <height>31</height>
@@ -49,49 +43,12 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>70</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="text">
-    <string>Razon social</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>70</y>
-     <width>241</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-radius: 4px;
-border:1px solid black;</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>110</y>
-     <width>131</width>
+     <x>410</x>
+     <y>50</y>
+     <width>51</width>
      <height>31</height>
     </rect>
    </property>
@@ -104,12 +61,46 @@ border:1px solid black;</string>
     <string>R.F.C</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="txtRFC">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>110</y>
-     <width>241</width>
+     <x>460</x>
+     <y>50</y>
+     <width>131</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-radius: 4px;
+border:1px solid black;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtRSocial">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>50</y>
+     <width>251</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-radius: 4px;
+border:1px solid black;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>50</y>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
@@ -118,17 +109,16 @@ border:1px solid black;</string>
      <family>Idealist Sans</family>
     </font>
    </property>
-   <property name="styleSheet">
-    <string notr="true">border-radius: 4px;
-border:1px solid black;</string>
+   <property name="text">
+    <string>Razon social</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>310</y>
-     <width>131</width>
+     <y>89</y>
+     <width>91</width>
      <height>31</height>
     </rect>
    </property>
@@ -141,50 +131,30 @@ border:1px solid black;</string>
     <string>Dirección</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_3">
+  <widget class="QLineEdit" name="txtDireccion">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>310</y>
-     <width>241</width>
+     <x>130</x>
+     <y>90</y>
+     <width>461</width>
      <height>31</height>
     </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius: 4px;
 border:1px solid black;</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_5">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>350</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
    </property>
    <property name="text">
-    <string>Numero ext.</string>
+    <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_4">
+  <widget class="QComboBox" name="comboEstado">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>350</y>
-     <width>241</width>
-     <height>31</height>
+     <x>130</x>
+     <y>170</y>
+     <width>461</width>
+     <height>26</height>
     </rect>
    </property>
    <property name="font">
@@ -196,87 +166,22 @@ border:1px solid black;</string>
     <string notr="true">border-radius: 4px;
 border:1px solid black;</string>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_6">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>390</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
+   <property name="editable">
+    <bool>true</bool>
    </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
+   <property name="currentText">
+    <string/>
    </property>
-   <property name="text">
-    <string>Numero int.</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_5">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>390</y>
-     <width>241</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-radius: 4px;
-border:1px solid black;</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>150</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="text">
-    <string>Codigo Postal</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_6">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>150</y>
-     <width>241</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-radius: 4px;
-border:1px solid black;</string>
+   <property name="frame">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>190</y>
-     <width>131</width>
+     <y>170</y>
+     <width>61</width>
      <height>31</height>
     </rect>
    </property>
@@ -289,12 +194,12 @@ border:1px solid black;</string>
     <string>Estado</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="txtEstado">
+  <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>190</y>
-     <width>241</width>
+     <x>20</x>
+     <y>250</y>
+     <width>91</width>
      <height>31</height>
     </rect>
    </property>
@@ -303,11 +208,23 @@ border:1px solid black;</string>
      <family>Idealist Sans</family>
     </font>
    </property>
-   <property name="focusPolicy">
-    <enum>Qt::StrongFocus</enum>
+   <property name="text">
+    <string>Localidad</string>
    </property>
-   <property name="acceptDrops">
-    <bool>true</bool>
+  </widget>
+  <widget class="QComboBox" name="comboMunicipio">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>210</y>
+     <width>461</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Idealist Sans</family>
+    </font>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius: 4px;
@@ -316,18 +233,30 @@ border:1px solid black;</string>
    <property name="editable">
     <bool>true</bool>
    </property>
-   <item>
-    <property name="text">
-     <string>New Item</string>
-    </property>
-   </item>
+  </widget>
+  <widget class="QComboBox" name="comboColonia">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>250</y>
+     <width>461</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-radius: 4px;
+border:1px solid black;</string>
+   </property>
+   <property name="editable">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>230</y>
-     <width>131</width>
+     <y>210</y>
+     <width>91</width>
      <height>31</height>
     </rect>
    </property>
@@ -340,12 +269,12 @@ border:1px solid black;</string>
     <string>Municipio</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="textMonicipio">
+  <widget class="QLabel" name="label_12">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>230</y>
-     <width>241</width>
+     <x>20</x>
+     <y>290</y>
+     <width>91</width>
      <height>31</height>
     </rect>
    </property>
@@ -354,11 +283,18 @@ border:1px solid black;</string>
      <family>Idealist Sans</family>
     </font>
    </property>
-   <property name="focusPolicy">
-    <enum>Qt::StrongFocus</enum>
+   <property name="text">
+    <string>Codigo Postal</string>
    </property>
-   <property name="acceptDrops">
-    <bool>true</bool>
+  </widget>
+  <widget class="QComboBox" name="comboColonia_2">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>290</y>
+     <width>461</width>
+     <height>26</height>
+    </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius: 4px;
@@ -367,25 +303,79 @@ border:1px solid black;</string>
    <property name="editable">
     <bool>true</bool>
    </property>
-   <item>
-    <property name="text">
-     <string>New Item</string>
-    </property>
-   </item>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>440</y>
-     <width>161</width>
-     <height>32</height>
+     <y>130</y>
+     <width>91</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Idealist Sans</family>
     </font>
+   </property>
+   <property name="text">
+    <string>Numero ext.</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>130</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Idealist Sans</family>
+    </font>
+   </property>
+   <property name="text">
+    <string>Numero int.</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtNint">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>130</y>
+     <width>113</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-radius: 4px;
+border:1px solid black;</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txtNext">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>130</y>
+     <width>113</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-radius: 4px;
+border:1px solid black;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnCancelar">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>350</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
@@ -400,19 +390,14 @@ color:white;</string>
     <string>Cancelar</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="btnAceptar">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>440</y>
-     <width>161</width>
+     <x>430</x>
+     <y>350</y>
+     <width>113</width>
      <height>32</height>
     </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
@@ -424,73 +409,20 @@ background-color:rgb(237,133,39);
 color:white;</string>
    </property>
    <property name="text">
-    <string>Guardar</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="txtColonia">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>270</y>
-     <width>241</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::StrongFocus</enum>
-   </property>
-   <property name="acceptDrops">
-    <bool>true</bool>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-radius: 4px;
-border:1px solid black;</string>
-   </property>
-   <property name="editable">
-    <bool>true</bool>
-   </property>
-   <item>
-    <property name="text">
-     <string>New Item</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QLabel" name="label_11">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>270</y>
-     <width>121</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Idealist Sans</family>
-    </font>
-   </property>
-   <property name="text">
-    <string>Colonia</string>
+    <string>Aceptar</string>
    </property>
   </widget>
  </widget>
  <tabstops>
-  <tabstop>lineEdit</tabstop>
-  <tabstop>lineEdit_2</tabstop>
-  <tabstop>lineEdit_6</tabstop>
-  <tabstop>txtEstado</tabstop>
-  <tabstop>textMonicipio</tabstop>
-  <tabstop>txtColonia</tabstop>
-  <tabstop>lineEdit_3</tabstop>
-  <tabstop>lineEdit_4</tabstop>
-  <tabstop>lineEdit_5</tabstop>
-  <tabstop>pushButton</tabstop>
-  <tabstop>pushButton_2</tabstop>
+  <tabstop>txtRSocial</tabstop>
+  <tabstop>txtRFC</tabstop>
+  <tabstop>txtDireccion</tabstop>
+  <tabstop>txtNext</tabstop>
+  <tabstop>txtNint</tabstop>
+  <tabstop>comboEstado</tabstop>
+  <tabstop>comboMunicipio</tabstop>
+  <tabstop>comboColonia</tabstop>
+  <tabstop>comboColonia_2</tabstop>
  </tabstops>
  <resources/>
  <connections/>
